avoid scrollbar content overlapping prop #463

--- a/src/ScrollBox/scrollBox.css
+++ b/src/ScrollBox/scrollBox.css
@@ -55,18 +55,21 @@
         left:       calc( 50% );
         transform:  translateX( -50% );
     }
+
     .iconLeft
     {
         top:        calc( 50% );
         left:       var( --spacing-1 );
         transform:  translateY( -50% );
     }
+
     .iconRight
     {
         top:        calc( 50% );
         right:      var( --spacing-1 );
         transform:  translateY( -50% );
     }
+
     .iconUp
     {
         top:        var( --spacing-1 );
@@ -89,7 +92,6 @@
     }
 }
 
-
 .scroll__horizontal
 {
     .inner
@@ -100,6 +102,7 @@
     }
 
 }
+
 .scroll__vertical
 {
     .inner
@@ -130,6 +133,16 @@
     .scrollBarVertical
     {
         height:         calc( 100% - var( --trackThickness ) );
+    }
+}
+
+.noScrollBarOverlap
+{
+    .inner
+    {
+        padding-right:   5px;
+        padding-bottom:  5px;
+        box-sizing:      border-box;
     }
 }
 
